@startuml
'https://plantuml.com/sequence-diagram

skinparam defaultFontName Cica

package domain.showDown {

    interface IShowDownService{
        --
        isPlayerWin(showDownField:ShowDownField):boolean
    }

    class ShowDownField{
        -player:Player
        -dealer:Dealer
        -deck:Deck
    }

    class Dealer {
        -hand : Hand
        --
        +open() : Hand
    }

    class Player {
        -hand : Hand
        --
        +open() : Hand
    }

    class Hand {
        -cards : List<Card>
    }

    class Card {
        -number : Number
        -mark : Mark
        --
        +getContent():String
    }

    Hand "1" --o "1" Player
    Hand "1" --o "1" Dealer
    Card "2..." --o "1" Hand

    class Number {
        -value : int
    }

    enum Mark {
        SPADE
        DIAMOND
        CLOVER
        HEART
    }

    Mark "1" --o "1" Card
    Number "1" --o "1" Card

}
@enduml